# PyQt6-sup

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
shoes_exam/: __init__.py  config.py  db_manager.py  main.py
shoes_exam/ui/: login_skeleton.ui  main_window_skeleton.ui
workflows/: publish.yml
